updated css and html indexes for Great Idea LS project

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -49,7 +49,7 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html, body {
@@ -64,3 +64,138 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+body{
+	width: 800px;
+	margin: 0 auto;
+}
+
+h1 {
+	text-align: center;
+	padding: 20px;
+	position: relative;
+	display: inline-block;
+	vertical-align:center;
+	font-size:80px;
+}
+
+.getStarted div {
+	width: 50%;
+	display: inline-block;
+	padding: 20px;
+}
+
+.toptext {
+	display: inline-block;
+	position: relative;
+	/* padding: 20px; */
+	padding: 20px auto;
+	width: 800px;
+	top: 40px;
+
+}
+
+.features{
+	width:50%;
+	position: relative;
+	
+}
+
+.about{
+	width:50%;	
+	position: relative;
+	left: 420px;
+	top: -94px;
+	
+}
+
+section{
+	display: block;
+}
+
+section div {
+	position:relative;
+	display:inline-block;
+	width:50%;
+	padding: 20px 10px 20px 0;
+	}
+
+section.bottomtext div {
+	width:32%;
+	}
+
+.bottomtext{
+	padding: 20px 0;
+}
+
+
+
+header{
+	position:relative;
+	display:inline-block;
+	height: 550px;
+	border-bottom: 2px solid black;
+	margin: 0 auto;
+	width: 800px;
+}
+
+.headerImage{
+	position: relative;
+	left: 400px;
+	top: -280px;
+	display:block;
+}
+
+footer {
+	border-top: 3px solid black;
+}
+
+.middle-img {
+	width: 99%;
+}
+
+.ino-container {
+	text-align: center;
+	right: 250px;
+	position: relative; 
+	display: block;
+	top: 60px;
+	/* background-color: red; */
+	
+}
+
+footer p {
+	align: center;
+}
+
+nav {
+	width: 800px;
+	margin: 0 auto
+}
+
+nav a {
+	padding: 20px;
+	text-decoration: none;
+	opacity: .3;
+	color: black;
+	font-size: 12px;
+}
+
+.logo {
+	align: right;
+	
+}
+
+footer p {
+	text-align: center;
+}
+
+div.started-button { 
+	padding: 5px;
+	border: 2px solid black;
+	position:relative;
+	display:inline-block;
+	padding: 7px 50px;
+	 
+}
+
